# AlgorithmsAndDataStructure

./: .gitignore
MIni_42/: CMakeLists.txt  Treap.cpp  Treap.h  implictNode.cpp  implictNode.h  main.cpp
MIni_42/tests/: tests.h
Mini_1/: Class1.cs  Class2.cs  Mini_1.cs  Mini_1.sln  Mini_2.cs  Mini_3.cs  Mini_4.cs
Mini_10/: ConsoleApplication1.sln
Mini_11/: CMakeLists.txt  main.c
Mini_12/: CMakeLists.txt  main.c
Mini_14/: CMakeLists.txt  main.c
Mini_15/: Mini_15.sln  Program.cs
Mini_16/: CMakeLists.txt  main.c
Mini_17/: CMakeLists.txt  main.c
Mini_18/: main.c  stack.c  stack.h  stack.s
Mini_19/: BinaryHeap.c  BinaryHeap.h  CMakeLists.txt  main.c  еуые.cpp
Mini_20/: CMakeLists.txt  main.c  stack.c  stack.h
Mini_21/: CMakeLists.txt  binomialHeap.c  binomialHeap.h  main.c  orderedList.c
Mini_22/: CMakeLists.txt  main.c
Mini_23/: CMakeLists.txt  main.c
Mini_32/: CMakeLists.txt  Solution.cpp  Solution.h  main.cpp
Mini_33/: CMakeLists.txt  Solution.cpp  Solution.h  main.cpp
Mini_35/: CMakeLists.txt  main.cpp  main2.cpp
Mini_36/: CMakeLists.txt  UnionFind.cpp  UnionFind.h  main.cpp  sheduleFine.h  unitTests.h
Mini_39/: CMakeLists.txt  f.cpp  f.h  main.cpp
Mini_41/: CMakeLists.txt  main.cpp
Mini_42/: CMakeLists.txt  treap.c  treap.h
Mini_43/: CMakeLists.txt  main.cpp
Mini_7/: Program.c  insertMergeSort.c  insertMergeSort.h
Mini_8/: CMakeLists.txt  InversionCounter.c  InversionCounter.h  Program.c
mini19_2/: CMakeLists.txt  main.c
mini26/: CMakeLists.txt  LinkNode.c  LinkNode.h  avlTree.c  avlTree.h  main.c
mini28/: HeshBlum.cs  (+2 more)
(+24 files in other folders)
